@@ -14,19 +14,47 @@ If you don't have an available MongoDB, you can start a local MongoDB service wi
 docker run -d  --name lowcoder-mongodb -p 27017:27017 -e MONGO_INITDB_DATABASE=lowcoder mongo
 ```
 
-Configure the MongoDB connection URI in the application-lowcoder.yml
-<img src="../../docs/.gitbook/assets/server-setup-image1.png"/>
+Configure the MongoDB connection URI in the server/api-service/lowcoder-server/src/main/resources/application-lowcoder.yml
+
 
 ### Redis
 
-If you don't have an available MongoDB, you can start a local Redis service with docker:
+If you don't have an available Redis, you can start a local Redis service with docker:
 
 ```shell
 docker run -d --name lowcoder-redis -p 6379:6379 redis
 ```
 
-Configure the Redis connection URI in the application-lowcoder.yml
-<img src="../../docs/.gitbook/assets/server-setup-image2.png"/>
+Configure the Redis connection URI in the server/api-service/lowcoder-server/src/main/resources/application-lowcoder.yml
+
+## Clone the Repository
+
+Now you can clone the Repository from Github: https://github.com/lowcoder-org/lowcoder
+
+```shell
+git@github.com:lowcoder-org/lowcoder.git
+```
+
+## Unsing VS Code
+
+Create a launch.json file in the .vscode folder of your new opened workspace.
+The contents should look like this:
+
+```JSON
+{
+    "version": "0.0.1",
+    "configurations": [
+        {
+            "type": "java",
+            "name": "ServerApplication",
+            "request": "launch",
+            "mainClass": "org.lowcoder.api.ServerApplication",
+            "projectName": "Lowcoder API Service",
+            "vmArgs": "-Dpf4j.mode=development -Dpf4j.pluginsDir=lowcoder-plugins -Dspring.profiles.active=lowcoder -XX:+AllowRedefinitionToAddDeleteMethods --add-opens java.base/java.nio=ALL-UNNAMED"
+        }
+    ],
+}
+```
 
 ## Build and start the Lowcoder server jar
 
@@ -34,22 +62,17 @@ Configure the Redis connection URI in the application-lowcoder.yml
 2. Next, execute the following commands in sequence
 
 ```shell
-cd server
+cd server/api-service
 mvn clean package
-java -Dpf4j.mode=development -Dspring.profiles.active=lowcoder -Dpf4j.pluginsDir=lowcoder-plugins -jar lowcoder-server/target/lowcoder-server-1.0-SNAPSHOT.jar
+java -Dpf4j.mode=development -Dspring.profiles.active=lowcoder -Dpf4j.pluginsDir=lowcoder-plugins -jar lowcoder-server/target/lowcoder-api-service.jar
 ```
 
-<img src="../../docs/.gitbook/assets/server-setup-start.gif"/>
+
 Now, you can check the status of the service by visiting http://localhost:8080 through your browser. By default, you should see an HTTP 404 error.
 
-<img src="../../docs/.gitbook/assets/server-setup-image3.png"/>
+## Unsing IntelliJ IDEA
 
-## Start with IntelliJ IDEA
-
-Configure the Run/Debug configuration as shown in the screenshot below, the version used in the screenshot is IntelliJ
-IDEA 2021.3.2 (Community Edition):
-<img src="../../docs/.gitbook/assets/server-setup-image4.png"/>
-<img src="../../docs/.gitbook/assets/server-setup-image5.png"/>
+Configure the Run/Debug configuration as shown below.
 
 <table>
     <tr>
@@ -78,3 +101,5 @@ mvn clean package
 ```
 
 After Maven package runs successfully, you can start the Lowcoder server with IntelliJ IDEA.
+
+For information on how to contribute to Lowcoder, please view our [Contribution Guide](https://docs.lowcoder.cloud/lowcoder-documentation/lowcoder-extension/opensource-contribution).
